# butcher

./: .gitignore  CMakeLists.txt  README.md  spszenguo.keystore
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.h  actors_generated.h  butcher.cpp  butcher.h  hud_layer.cpp  hud_layer.h  levels_generated.h  loading_scene.cpp  loading_scene.h
Classes/actors/: actor.cpp  actor.h  actor_id.h  amounted_item.h  attribute_type.h  character.cpp  character.h  craft_type.h  craftbook.cpp  craftbook.h  drop_rule.h  inventory.cpp  inventory.h  item.cpp  item.h  item_category.h  item_slot_type.h  monster.cpp  monster.h  object.cpp  object.h  player.cpp  player.h  recipe.cpp  recipe.h  recipe_id.h  trap.cpp  trap.h  use_target.h
Classes/actors/actions/: actor_action.h  attack_action.cpp  attack_action.h  die_action.cpp  die_action.h  equip_action.cpp  equip_action.h  move_action.cpp  move_action.h  pickup_action.cpp  pickup_action.h  shot_action.cpp  shot_action.h  throw_action.cpp  throw_action.h  use_action.cpp  use_action.h
Classes/actors/ai/: ai.cpp  ai.h
Classes/actors/ai/fsm/: fsm.cpp  fsm.h  fsm_state_type.h
Classes/actors/ai/fsm/states/: fsm_state.cpp  fsm_state.h  idle_state.cpp  idle_state.h  melee_attack_state.cpp  melee_attack_state.h  move_to_target_state.cpp  move_to_target_state.h  ranged_attack_state.cpp  ranged_attack_state.h  wandering_state.cpp  wandering_state.h
Classes/actors/effects/: effect.cpp  effect.h  effect_id.h  modifier.h  special_modifier_type.h
Classes/actors/instances/: door.cpp  door.h  stairs_down.cpp  stairs_down.h  stairs_up.cpp  stairs_up.h  waypoint.cpp  waypoint.h
Classes/data/: actors_database.cpp  actors_database.h  actors_generated.h  effects_database.cpp  effects_database.h  effects_generated.h  levels_database.cpp  levels_database.h  levels_generated.h  recipes_database.cpp  recipes_database.h  recipes_generated.h  save_generated.h
Classes/dungeon/: dungeon_description.h  dungeon_generator.cpp  dungeon_generator.h  dungeon_layer.cpp  dungeon_layer.h  dungeon_state.cpp  dungeon_state.h  grid_generator.h  level_manager.cpp  level_manager.h  map.cpp  map.h  room.cpp  room.h  spawn_builder.cpp  spawn_builder.h  tile_gid.h  tmx_builder.cpp  waypoints.h
Classes/dungeon/generators/: DungeonMaker.h  bsp_dungeon_generator.cpp  bsp_dungeon_generator.h  cave_grid_generator.cpp  cave_grid_generator.h  celular_automata_generator.cpp  celular_automata_generator.h  dungeon_generator.cpp  dungeon_generator.h  dungeon_maker_generator.cpp  dungeon_maker_generator.h  grid_generator.h  maze_dungeon_generator.cpp  maze_dungeon_generator.h  minimum_corridor_generator.cpp  minimum_corridor_generator.h  tmx_builder.cpp  tmx_builder.h
Classes/fov/: permissive-fov-cpp.h  permissive-fov.cc  permissive-fov.h
Classes/lib/: DungeonMaker.cpp
Classes/utils/: damage.cpp  damage.h  dices.cpp  dices.h  directions.cpp  directions.h  event_type.h  grid.h  observer.cpp  observer.h  path.cpp  path.h  profiler.cpp  profiler.h  target.cpp  target.h  utils.cpp  utils.h
Classes/view/: craft_view.cpp  craft_view.h  dungeon_layer.cpp  dungeon_layer.h  game_menu.cpp  game_menu.h  hud_layer.cpp  hud_layer.h  hud_log.cpp  hud_log.h  inventory_view.cpp  inventory_view.h  loading_scene.cpp  minimap.cpp  minimap.h  waypoint_view.cpp  waypoint_view.h
Gfx/: arrow_up.xcf  bar1.xcf  bar1_empty.xcf  butcher.xcf  butcher2.xcf  button.xcf  button_blue.xcf  button_green.xcf  button_orange.xcf  button_red.xcf  cave-tile-set-64.xcf  cave-tile-set-64_filter.xcf  cow.xcf  door_closed.xcf  door_open.xcf  dungeon-tile-set-64.xcf  dungeon_door_open.xcf  heart.xcf  logo.xcf  stairs_down.xcf  stairs_up.xcf
Resources/: actors.fbs  actors_data.json  actors_generated.h  compile_json.sh  default.design  design4A  effects.fbs  effects_data.json  levels.fbs  levels_data.json  levels_generated.h  recipes.fbs  recipes_data.json  save.fbs  save_data.json  save_generated.h
Resources/dungeons/: 1.tmx  empty_cave.tmx  empty_dungeon.tmx  empty_farm.tmx
doc/: fighting_system.graphml
proj.android/: .cproject  .project  AndroidManifest.xml  ant.properties  build.xml  local.properties
proj.android/jni/: Android.mk
proj.android/res/values/: strings.xml
proj.win10/: Butcher.sln
proj.win10/App/: Butcher.vcxproj  Butcher.vcxproj.filters  Package.appxmanifest
proj.win32/: Butcher.sln
proj.win8.1-universal/: Butcher.sln
proj.win8.1-universal/App.Shared/: Butcher.Shared.vcxitems
proj.win8.1-universal/App.Windows/: Butcher.Windows.vcxproj  Butcher.Windows.vcxproj.filters  Package.appxmanifest
proj.win8.1-universal/App.WindowsPhone/: Butcher.WindowsPhone.vcxproj  Package.appxmanifest
